<resources>
    <string name="app_name">Kino do którego warto się wybrać</string>
    <string name="description">Opis:</string>
    <string name="name">Nazwa:</string>
    <string name="location">Lokalizacja:</string>
    <string name="new_cinema">Nowe Kino</string>
    <string name="about_app">O Aplikacji</string>
    <string name="address">Adres:</string>
    <string name="save_cinema">Zapisz kino</string>
    <string name="update_cinema">Aktualizuj kino</string>
    <string name="cancel">Anuluj</string>
    <string name="hint_name">Nazwa kina</string>
    <string name="hint_street">Ulica</string>
    <string name="hint_city">Miasto</string>
    <string name="hint_description">Opis kina</string>
    <string name="cinema_street_required">Ulica jest wymagana</string>
    <string name="cinema_city_required">Miasto jest wymagane</string>
    <string name="location_not_found">Lokalizacja nie została odnaleziona na mapie.</string>
    <string name="enable_location">Włącz lokalizację</string>
    <string name="settings">Ustawienia</string>
    <string name="location_is_off">Lokalizacja jest wyłączona.</string>
    <string name="please_enable_location">Proszę włączyć lokalizację.</string>
    <string name="distance">Odległość:</string>
    <string name="gps_is_off">GPS jest wyłączony</string>
    <string name="no_data">Brak danych</string>
    <string name="unable_to_show_map">Nie można wyświetlić mapy.</string>
    <string name="location_permission_disable">Uprawnienia do lokalizacji są wyłączone.</string>
    <string name="enable_location_permission">Włacz uprawnienia do lokalizacji w ustawieniach aplikacji.</string>
</resources>
