<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="false"
            android:layout_marginBottom="54dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="24dp"
                android:text="@string/name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cinemaName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cinemaStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_street"
                android:inputType="text" />

            <EditText
                android:id="@+id/cinemaCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_city"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cinemaDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <Button
            android:id="@+id/cinemaActionBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />
    </RelativeLayout>
</ScrollView>